Fix header alignment on mobile

--- a/src/app/currency-selector/currency-selector.component.scss
+++ b/src/app/currency-selector/currency-selector.component.scss
@@ -25,7 +25,7 @@
 .currency-select-rate-label {
   font-size: small;
 }
-@media (min-width: 1200px) and (max-width: 1500px) {
+@media (min-width: 1200px) and (max-width: 1575px) {
   .hide-on-smaller-screens {
     display: none;
   }
